// Copyright (C) 2015 The Protogalaxy Project
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package gameroom;

service RoomManager {
  rpc CreateRoom (CreateRequest) returns (CreateReply) {}
  rpc JoinRoom (JoinRequest) returns (JoinReply) {}
  rpc RoomInfo (InfoRequest) returns (InfoReply) {}
}

enum ResponseStatus {
  SUCCESS = 0;
  ROOM_FULL = 1;
  ROOM_NOT_FOUND = 2;
  ALREADY_IN_ROOM = 3;
}

message CreateRequest {
  string user_id = 1;
}

message CreateReply {
  ResponseStatus status = 1;
  string room_id = 2;
}

message JoinRequest {
  string room_id = 1;
  string user_id = 2;
}

message JoinReply {
  ResponseStatus status = 1;
}

message InfoRequest {
  string room_id = 1;
}

message Room {
  string id = 1;
}

message InfoReply {
  ResponseStatus status = 1;
  Room room = 2;
}
